# kinematic-decompose

./: .gitignore  pyproject.toml  sync.sh
data/: 307486.ini  mixture_model_TNG50-1_99_307486.pkl  structure_properties_TNG50-1_99_307486.pkl
src/kinematic_decompose/: __init__.py  config.py  pipeline.py  visualize.py
src/kinematic_decompose/PyTNG/: derived_array.py  extension.py  simdict_getter.py  snapshot_loader.py  tng_config.py
src/kinematic_decompose/PyTNG/illustris_python/: sublink.py
src/kinematic_decompose/gravity/: kinematic_solver.py
src/kinematic_decompose/mixture/: __init__.py  _auto_gaussian_mixture.py  _base.py  _gaussian_mixture.py  preprocessing.py  util.py
tests/: example_auto_gaussian_mixture.py  example_ecut.py  example_eoemin_cut.py  example_gaussian_mixture.py  example_gravity_accuracy.py  example_load_particle.py  example_pipeline.py  example_visualize.py
